# slimcpplib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
config/cmake/: base.cmake  msvc.cmake
examples/: main.cpp
include/: long_int.h  long_math.h  long_math_gcc.h  long_math_msvc.h  long_uint.h
include/slimcpplib/: long_fixdiv.h  long_int.h  long_io.h  long_math.h  long_math_gcc.h  long_math_long.h  long_math_msvc.h  long_uint.h
src/bench/: CMakeLists.txt  arithmetic_bench.cpp  bench_helpers.h  type_sets.h
src/tests/: CMakeLists.txt  arithmetic_tests.cpp  base_tests.cpp  compound_shift_tests.cpp  fixdiv_tests.cpp  io_tests.cpp  literal_mixed_tests.cpp  overflow_boundary_tests.cpp  signed_tests.cpp  stl_properties_tests.cpp  type_sets.h
tests/: CMakeLists.txt  CMakeSettings.json
tests/config/cmake/: base.cmake  msvc.cmake
tests/src/: CMakeLists.txt  arithmetic_tests.cpp  base_tests.cpp  compound_shift_tests.cpp  fixdiv_tests.cpp  io_tests.cpp  literal_mixed_tests.cpp  overflow_boundary_tests.cpp  signed_tests.cpp  stl_properties_tests.cpp  test_type_sets.h
